# WarehouseVision-AI

./: Dockerfile  README.md  docker-compose.yml  requirements.txt
WarehouseVision-AI/: README.md  pyproject.toml
WarehouseVision-AI/docs/: ARCHITECTURE.md  GITHUB_SETUP.md  INSTALL.md
WarehouseVision-AI/scripts/: run_pipeline.py  train_yolo.py
WarehouseVision-AI/src/almox_vision/validators/: qwen_validator.py
configs/: config.yaml  dataset.yaml
monitoring/: prometheus.yml
src/almox_vision/: pipeline.py
src/almox_vision/alerts/: dispatcher.py
src/almox_vision/api/: main.py
src/almox_vision/detectors/: yolov8_detector.py
src/almox_vision/mlops/: monitor.py
tests/: test_api.py
