[project]
name = "mbi-master-vision-almoxarifado"
version = "0.1.0"
description = "Pipeline YOLOv8 + Qwen-VL com MLOps para almoxarifados e centros de distribuição de alimentos"
authors = [{name = "Thiago Passaline Moitinho"}]
requires-python = ">=3.10"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
